# GHEX

./: CMakeLists.txt  build-tips.txt
.github/workflows/: CI.yml  test_pip.yml
benchmarks/: CMakeLists.txt  communication_objects.cpp  simple_rma.cpp  simple_rma_base.hpp  simple_rma_ghex.hpp
benchmarks/scripts/: CMakeLists.txt  copy_script.cmake  generate-ghex.ipynb  generate-ghex.py  slurm-tl-benchmarks.sh.in
benchmarks/simple_rma/: simple_rma_base.hpp  simple_rma_ghex.hpp  simple_rma_mpi.hpp
benchmarks/transport/: CMakeLists.txt  ghex_p2p_bi_cb_avail_mt.cpp  ghex_p2p_bi_cb_wait_mt.cpp  ghex_p2p_bi_ft_avail_mt.cpp  ghex_p2p_bi_ft_wait_mt.cpp  mpi_p2p_bi_avail_mt.cpp  utils.hpp
benchmarks/util/: decomposition.hpp  memory.hpp  options.hpp
bindings/: CMakeLists.txt
bindings/fhex/: CMakeLists.txt
bindings/python/src/_pyghex/structured/regular/: communication_object.cpp
bindings/python/src/_pyghex/unstructured/: communication_object.cpp
cmake/: FindLibfabric.cmake  GHEXConfig.cmake.in  GHEX_SetupLibfabric.cmake  GHEX_macros.cmake  config.hpp.in  ghex_common.cmake  ghex_compile_options.cmake  ghex_oomph.cmake
include/ghex/: arch_traits.hpp  buffer_info.hpp  bulk_communication_object.hpp  communication_object.hpp  communication_object_2.hpp  packer.hpp  pattern_container.hpp
include/ghex/allocator/: allocation.hpp  default_init_allocator.hpp
include/ghex/common/: await_futures.hpp  utils.hpp
include/ghex/cuda_utils/: error.hpp
include/ghex/device/cuda/: runtime.hpp  stream.hpp
include/ghex/mpi/: communicator.hpp
include/ghex/rma/: locality.hpp  range.hpp  range_factory.hpp
include/ghex/structured/: bulk_communication_object.hpp  field_descriptor.hpp  pack_kernels.hpp  pattern.hpp  remote_thread_range.hpp  rma_put.hpp  rma_range.hpp  rma_range_generator.hpp  simple_field_wrapper.hpp  subarray.hpp
include/ghex/structured/regular/: field_descriptor.hpp  halo_generator.hpp  make_pattern.hpp
include/ghex/transport_layer/: callback_utils.hpp  communicator.hpp  context.hpp  message_buffer.hpp  raw_shared_message_buffer.hpp  shared_message_buffer.hpp  tags.hpp  ucx
include/ghex/transport_layer/libfabric/: communicator.hpp  context.hpp  controller.hpp  error.hpp  fabric_error.hpp  future.hpp  gni-debug.txt  header.hpp  libfabric_macros.hpp  libfabric_region_provider.hpp  locality.hpp  performance_counter.hpp  print.hpp  rdma_locks.hpp  readers_writers_mutex.hpp  receiver.hpp  receiver_fwd.hpp  request.hpp  rma_base.hpp  rma_receiver.hpp  sender.hpp  unique_function.hpp  unordered_map.hpp
include/ghex/transport_layer/libfabric/rma/: atomic_count.hpp  memory_pool.hpp  memory_region.hpp
include/ghex/transport_layer/libfabric/rma/detail/: allocator.hpp  allocator.hpp.autosave  memory_block_allocator.hpp  memory_pool_stack.hpp  memory_region_allocator.hpp  memory_region_impl.hpp  memory_region_traits.hpp
include/ghex/transport_layer/mpi/: bulk_exchange.hpp  communicator.hpp  communicator_state.hpp  context.hpp  future.hpp  setup.hpp  subarray.hpp  window.hpp
include/ghex/transport_layer/ucx/: communicator.hpp  context.hpp
include/ghex/transport_layer/ucx_new/: communicator.hpp  context.hpp  request_data.hpp  state.hpp
include/ghex/transport_layer/ucx_orig/: communicator.hpp
include/ghex/unstructured/: communication_object_ipr.hpp  pattern.hpp
test/structured/regular/: CMakeLists.txt  test_regular_domain.cpp  test_simple_regular_domain.cpp  test_simple_regular_exchange_3D.cpp
tests/: CMakeLists.txt  communication_object_2.cpp  local_rma.cpp  simple_domain.cpp  simple_domain.cu  simple_regular_exchange.cpp  simple_regular_exchange_3D.cpp  simple_regular_exchange_3D.cu
tests/bindings/: CMakeLists.txt  test_f_structured.f90
tests/transport/: CMakeLists.txt  test_barrier.cpp  test_barrier_mt.cpp  test_cancel.cpp  test_cancel_request.cpp  test_context.cpp  test_context.cpp.jb  test_fancy_pointer.cpp  test_low_level.cpp  test_low_level.cu  test_rma_mpi.cpp  test_send_multi.cpp  test_send_recv.cpp
utils/: gtest_main_libfabric.cpp
